--- a/index.html
+++ b/index.html
@@ -38,26 +38,27 @@
 
       <task>
             <li class={ completed: item.done }>
-              <label class={ completed: item.done }>
-                { item.title }
-              </label> 
-              <a class="delete_task" data-task-id="{ i }">del</a>
-              <a class="done_task" data-task-id="{ i }">done</a>
-              <a class="edit_task" data-task-id="{ i }">edit</a>
+              <p class="{ completed: item.done } title">
+                <span class="title_task{ i }">{ item.title }</span>
+                <input name="input" value={ item.title } class="edit_input edit_input{ i }">
+                <button type="submit" class="edit_input edit_button edit_button{ i }">save</button>
+                <a class="delete_task" data-task-id="{ i }">del</a>
+                <a class="done_task" data-task-id="{ i }">done</a>
+                <a class="edit_task" data-task-id="{ i }">edit</a>
+              </p> 
             </li>
       </task>
 
       <add_task>
         <form onsubmit="return addTask()">
             <input name="input" id="newTask">
-            <button type="submit">Add</button>
+            <button type="submit" id="add_button">Add</button>
         </form>
       </add_task>
     </script>
 
     <script>
-    var tags = riot.mount('todo', tasks);
-    todoTag = tags[0];
+    riot.mount('todo', tasks);
     </script>
 
 
